<resources>
    <string name="app_name">BulkUpCoach</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_calendar">Calendar</string>

    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">563783968895-nhvi7r8247ms5636j0jnik2bv8s3iiu2.apps.googleusercontent.com</string>
    <string name="dashboard">dashboard</string>
    <string name="enter_food_query">Enter Food Query</string>
    <string name="btn_get_protein">Get Protein</string>
    <string name="title_protein">Protein</string>
    <string name="insert_workout_exercise">Insert Workout Exercise</string>
    <string name="resistance_kg">Resistance (kg)</string>
    <string name="duration_milliseconds">Duration (milliseconds)</string>
    <string name="repetitions">Repetitions</string>
</resources>